# myfirstmesonproject

./: README.md  meson.build  pyproject.toml  readme.md  test.py
src/mycmodule/: __init__.pyi  mycmodule.c
src/mypythonmodule/: __init__.py  myfunction.py
