[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'myfirstmesonproject'
version = '0.0.1'
description = 'My first meson project that combines C and Python code.'
readme = 'readme.md'
requires-python = '>=3.8'
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
dependencies = [

]